add a div for form

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <script src="js/scripts.js" type="text/javascript">  </script>
 </head>
 <body>
-  
+  <div class="main">
+    <form>
+      <label for="userInput">Enter your number:</label>
+      <input type="text">
+      <button type="button" name="button">Let's Play ping-pong!</button>
+    </form>
+  </div>
 </body>
 </html>
