add an empty div for answer

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
       <button type="button" name="button">Let's Play ping-pong!</button>
     </form>
   </div>
+
+  <div class="display">
+    
+  </div>
 </body>
 </html>
