add business logic code

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <div class="main">
     <form>
       <label for="userInput">Enter your number:</label>
-      <input type="text">
+      <input id="userInput" type="text">
       <button type="button" name="button">Let's Play ping-pong!</button>
     </form>
   </div>
 
   <div class="display">
-    
+
   </div>
 </body>
 </html>
