--- a/index.html
+++ b/index.html
@@ -2,23 +2,83 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>PING-PONG!</title>
+  <title>Ping Pong</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
-  <script src="js/scripts.js" type="text/javascript">  </script>
+
+
 </head>
 <body>
-  <div class="main">
-    <form>
-      <label for="userInput">Enter your number:</label>
-      <input id="userInput" type="text">
-      <button type="button" name="button">Let's Play ping-pong!</button>
-    </form>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 heading">
+
+        <img src="images/pingpong2.jpg" alt="ping-pong">
+      </div>
+    </div>
   </div>
 
-  <div class="display">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6 Creator">
+        <h2>About The Creator</h2>
+
+
+          <h3>About:</h3>
+          <p>Lorem ipsum dolor sit git amet, consectetur adipisic ing elit, sed do eiusmod tempor incididnunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in re prehenderit in volup tate velit esse cillum dolore eu fugiat nulla parriatur.
+            Exce teur sint occaecat cupi datat non proident
+            <h3>Created By:</h3>
+            <ul>
+              <li>Kinuthia David</li>
+            </ul>
+
+          </p>
+
+
+      </div>
+      <div class="col-md-6 Rules">
+        <h3>How To Play:</h3>
+        <h4>Rules:</h4>
+        <ul>
+          <li>Numbers Divisible By Three Become "PING"</li>
+          <li>Numbers Divisible By Five Become "PONG"</li>
+          <li>nUMBERS Divisible By Fifteen Become "PINGPONG"</li>
+        </ul>
+        <h5>Good Luck!</h5>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <form id="myformid">
+
+          <label for="mynumber">Enter Your Number:</label>
+          <input type="number" id="mynumber" placeholder="Enter a number">
+
+          <button type="submit" name="button" id="nm" class="btn btn-primary">Let's Play Ping-Pong!</button>
+          <br>
+          <br>
+          <section id="answers">
+
+          </section>
+        </form>
+      </div>
+    </div>
 
   </div>
+
+
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
+
+
 </body>
 </html>
