--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Ping Pong</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Gugi|Limelight" rel="stylesheet">
 
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-md-12 heading">
 
-        <img src="images/pingpong2.jpg" alt="ping-pong">
+        <img class="img img-rounded PING-PONG" src="images/pingpong2.jpg" alt="ping-pong">
       </div>
     </div>
   </div>
@@ -21,7 +21,8 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6 Creator">
-        <h2>About The Creator</h2>
+        <div class="well ">
+          <h2>About The Creator</h2>
 
 
           <h3>About:</h3>
@@ -35,18 +36,23 @@
             </ul>
 
           </p>
+        </div>
+
 
 
       </div>
       <div class="col-md-6 Rules">
-        <h3>How To Play:</h3>
-        <h4>Rules:</h4>
-        <ul>
-          <li>Numbers Divisible By Three Become "PING"</li>
-          <li>Numbers Divisible By Five Become "PONG"</li>
-          <li>nUMBERS Divisible By Fifteen Become "PINGPONG"</li>
-        </ul>
-        <h5>Good Luck!</h5>
+        <div class="well ">
+          <h3>How To Play:</h3>
+          <h4>Rules:</h4>
+          <ul>
+            <li>Numbers Divisible By Three Become "PING"</li>
+            <li>Numbers Divisible By Five Become "PONG"</li>
+            <li>nUMBERS Divisible By Fifteen Become "PINGPONG"</li>
+          </ul>
+          <h5>Good Luck!</h5>
+        </div>
+
       </div>
     </div>
   </div>
@@ -54,7 +60,7 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 well PLAY">
         <form id="myformid">
 
           <label for="mynumber">Enter Your Number:</label>
