--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 well PLAY">
-        <form id="myformid">
+        <form id="myFormId">
 
-          <label for="mynumber">Enter Your Number:</label>
-          <input type="number" id="mynumber" placeholder="Enter a number">
+          <label for="userNumber">Enter Your Number:</label>
+          <input type="number" id="userNumber" placeholder="Enter a number">
 
           <button type="submit" name="button" id="nm" class="btn btn-primary">Let's Play Ping-Pong!</button>
           <br>
