--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6 Creator">
-        <div class="well ">
+        <div class="well creatorWell">
           <h2>About The Creator</h2>
 
 
@@ -42,7 +42,7 @@
 
       </div>
       <div class="col-md-6 Rules">
-        <div class="well ">
+        <div class="well rulesWell">
           <h3>How To Play:</h3>
           <h4>Rules:</h4>
           <ul>
@@ -61,18 +61,22 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 well PLAY">
-        <form id="myFormId">
 
-          <label for="userNumber">Enter Your Number:</label>
-          <input type="number" id="userNumber" placeholder="Enter a number">
+          <form id="myFormId">
 
-          <button type="submit" name="button" id="nm" class="btn btn-primary">Let's Play Ping-Pong!</button>
-          <br>
-          <br>
-          <section id="answers">
+            <label  for="userNumber">Enter Your Number:</label>
+            <input type="number" id="userNumber"  placeholder="Enter a number">
 
-          </section>
-        </form>
+            <button type="submit" name="button"  class="btn myButton">Let's Play Ping-Pong!</button>
+
+            <br>
+            <br>
+            <section  class="answerSection" id="answers">
+
+            </section>
+          </form>
+
+
       </div>
     </div>
 
